--- a/app/src/main/res/drawable/ic_wallet.xml
+++ b/app/src/main/res/drawable/ic_wallet.xml
@@ -1,7 +1,10 @@
+<!-- res/drawable/ic_wallet.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp" android:height="24dp"
-    android:viewportWidth="24" android:viewportHeight="24">
+    android:width="128dp"
+    android:height="128dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-        android:fillColor="#4CAF50"
-        android:pathData="M21,7H3C1.9,7 1,7.9 1,9v6c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2V9C23,7.9 22.1,7 21,7zM20,15H4V9h16V15z"/>
+        android:fillColor="#16A34A"
+        android:pathData="M2,7c0,-1.1 0.9,-2 2,-2h16c1.1,0 2,0.9 2,2v10c0,1.1 -0.9,2 -2,2H4c-1.1,0 -2,-0.9 -2,-2V7zm18,0H4v10h16V7zm-2,3a2,2 0 1,1 0,4a2,2 0 0,1 0,-4z"/>
 </vector>
