--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -29,7 +29,7 @@
             android:text="@string/forgot_password_title"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:textColor="#065F46"
+            android:textColor="@color/black"
             android:layout_marginBottom="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -55,12 +55,11 @@
 
             <EditText
                 android:id="@+id/et_email"
-                android:hint="@string/email_hint"
-                android:inputType="textEmailAddress"
-                android:autofillHints="emailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edittext_bg"
+                android:autofillHints="emailAddress"
+                android:hint="@string/email_hint"
+                android:inputType="textEmailAddress"
                 android:padding="12dp" />
 
             <Button
