--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -195,7 +195,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="2dp"
-                android:backgroundTint="@color/white">
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -203,13 +203,11 @@
                     android:orientation="vertical"
                     android:padding="12dp">
 
-                    <!-- RecyclerView for transactions -->
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvTransactions"
+                        android:id="@+id/rvRecent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false" />
-
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
