--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,18 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home"
-        android:title="Trang chủ" />
-    <item
-        android:id="@+id/nav_chart"
-        android:icon="@drawable/ic_chart"
-        android:title="Biểu đồ" />
-    <item
-        android:id="@+id/nav_transaction"
-        android:icon="@drawable/ic_transaction"
-        android:title="Giao dịch" />
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="Cài đặt" />
+    <item android:id="@+id/nav_home"          android:icon="@drawable/ic_home"        android:title="Trang chủ"/>
+    <item android:id="@+id/nav_chart"         android:icon="@drawable/ic_chart"       android:title="Biểu đồ"/>
+    <item android:id="@+id/nav_transactions"  android:icon="@drawable/ic_transaction" android:title="Giao dịch"/>
+    <item android:id="@+id/nav_settings"      android:icon="@drawable/ic_settings"    android:title="Cài đặt"/>
 </menu>
