--- a/app/src/main/res/layout/item_transaction_mini.xml
+++ b/app/src/main/res/layout/item_transaction_mini.xml
@@ -8,7 +8,8 @@
     android:clickable="true"
     android:focusable="true"
     app:cardCornerRadius="12dp"
-    app:cardElevation="1dp">
+    app:cardElevation="1dp"
+    app:cardBackgroundColor="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
