--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -85,11 +85,12 @@
         <!-- Quay lại Login -->
         <TextView
             android:id="@+id/tvBackLogin"
-            android:text="@string/back_to_login"
-            android:textColor="#059669"
-            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true" />
+            android:clickable="true"
+            android:minHeight="48dp"
+            android:text="@string/back_to_login"
+            android:textColor="#059669"
+            android:textSize="14sp" />
     </LinearLayout>
 </ScrollView>
