--- a/app/src/main/res/layout/content_statistic_overview.xml
+++ b/app/src/main/res/layout/content_statistic_overview.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Inner content for statistic overview (used by activity and fragment) -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tvMonthTitle"
@@ -149,4 +146,4 @@
         android:nestedScrollingEnabled="false"
         android:clipToPadding="false"/>
 
-</LinearLayout>
+</merge>
