--- a/app/src/main/res/layout/activity_daily_reminder.xml
+++ b/app/src/main/res/layout/activity_daily_reminder.xml
@@ -77,7 +77,9 @@
                 <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/switchEnableReminder"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp" />
             </LinearLayout>
 
             <!-- Giờ nhắc -->
