--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:title="Giao dịch"
+            android:title="@string/transactions_label"
             android:background="@android:color/transparent"/>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -26,10 +26,19 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:padding="16dp"
         android:paddingBottom="100dp"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:fillViewport="true">
 
-        <!-- include fragment-friendly inner content -->
-        <include layout="@layout/content_transactions" />
+        <!-- Wrap the included <merge> content so NestedScrollView has a single direct child -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="20dp">
+
+            <include layout="@layout/content_transactions" />
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
